--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Gabriel Correa 2ºA</p>
+        <p>Projeto desenvolvido por Roberta Almeida 2ºA</p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
